cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(FPFH)
find_package(PCL 1.7 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable (FPFH example_fast_point_feature_histograms.cpp)
target_link_libraries (FPFH ${PCL_LIBRARIES})
